--- a/src/stylesheets/TaskForm.css
+++ b/src/stylesheets/TaskForm.css
@@ -39,16 +39,16 @@
   
   .task-input {
     width: 70%;
-    font-size: calc(1em + 1vh);
+    font-size: 1em;
     padding: 2px 4px 2px 3px;
     border-radius: 4px 0 0 4px;
     border: 1px solid #00471b;
   }
   
   .task-button {
-    width: 20%;
     padding: 0;
     margin: 0;
-    font-size: calc(0.5em + 1vh);
+    font-size: 1em;
+    justify-content: center;
   }
 }
